--- a/coffee.html
+++ b/coffee.html
@@ -1,71 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="eng">
 <head>
     <meta charset="UTF-8">
     <title>Fancy Coffee Company©</title>
-    <link rel="stylesheet" href="css/coffee-project.css">
+    <!--Bootstrap Stylesheet CDN:-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--Custom CSS Stylesheet:-->
+    <link rel="stylesheet" href="../css/coffee-project.css">
 </head>
 <body>
 
-<div class="docrob-tron"  style="background-image:
-      url(images/intro-1646842160.jpg);  background-size: cover">
-    <h2 class="pt-3 pb-3 text-center w-100" style="background-color: rgba(255,255,255,0.8);
-            ">Fancy Coffee Company©
-    </h2>
-</div>
-
-<div class="col-4 text-center card">
-    <form>
-        <label for="roast-selection"></label>
-        <select id="roast-selection">
-            <option>light</option>
-            <option>medium</option>
-            <option>dark</option>
-        </select>
-
-    </form>
-    <form>
-        <label for="coffee-selection">Filter by Name:</label>
-        <input id="coffee-selection" name="coffee-selection" type="text">
-    </form>
-    <div>
-        <input class="btn btn-dark btn-block" id="submit" type="submit"/>
+<!--Header with Background Image and Text Here:-->
+<header>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4 text-center text-dark">Fancy Coffee Company©</h1>
+            <p class="lead"></p>
+        </div>
     </div>
-    <br>
-</div>
-    <form>
-        <h1>Add a Coffee:</h1>
-        <label for="new-roast-selection">New Roast:</label>
-        <select id="new-roast-selection">
-            <option>Light</option>
-            <option>Medium</option>
-            <option>Dark</option>
-        </select>
+</header>
 
-        <label for="new-coffee-selection">New Coffee Name:</label>
-        <input id="new-coffee-selection" name="new-coffee-selection" type="text">
-    </form>
-    <div>
-        <input class="btn btn-dark btn-block" id="submit2" type="submit" />
-    </div>
-    <br>
+<!--Top Card Below Header with Quote Here:-->
+
+<!--Main Body Div Code (Render Coffees JS Functions) Here:-->
+<div class="container">
+    <div class="row">
+        <div class="col-8 text-center card">
+            <div id="coffees" class="coffee">
+                <span>Coffee Id</span>
+                <h1>Coffee Name</h1>
+                <p>Coffee Roast</p>
+            </div>
+        </div>
+        <!--Filter by Roast & Coffee Search HTML Code Here:-->
+        <div class="col-4 text-center card">
+            <form>
+                <h1>Search for a Coffee:</h1>
+                <label for="roast-selection">Filter by Roast:</label>
+                <select id="roast-selection">
+                    <option>All Roasts</option>
+                    <option>Light</option>
+                    <option>Medium</option>
+                    <option>Dark</option>
+                </select>
+            </form>
+            <form>
+                <label for="coffee-selection">Filter by Name:</label>
+                <input id="coffee-selection" name="coffee-selection" type="text">
+            </form>
+            <br>
+            <!--User Add a New Coffee HTML Code Here:-->
+            <form>
+                <h1>Add a Coffee:</h1>
+                <label for="new-roast-selection">New Roast:</label>
+                <select id="new-roast-selection">
+                    <option>Light</option>
+                    <option>Medium</option>
+                    <option>Dark</option>
+                </select>
+                <br>
+                <label for="new-coffee-selection">New Coffee Name:</label>
+                <input id="new-coffee-selection" name="new-coffee-selection" type="text">
+            </form>
+            <div>
+                <input class="btn btn-dark btn-block" id="submit" type="submit" />
+            </div>
+            <br>
 
 
-<table>
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>NAME</th>
-        <th>ROAST</th>
-    </tr>
-    </thead>
-    <tbody id="coffees"></tbody>
-</table>
-
-<script src="js/coffee-project.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
+            <!--JQuery CDN:-->
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+            <!--Bootstrap Script CDN:-->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+            <!--Custom JS Script:-->
+            <script src="../js/main.js"></script>
 </body>
 </html>
