added s to class name to fix problem

--- a/coffee.html
+++ b/coffee.html
@@ -26,7 +26,7 @@
 <div class="container">
     <div class="row">
         <div class="col-8 text-center card">
-            <div id="coffees" class="coffee">
+            <div id="coffees" class="coffees">
                 <span>Coffee Id</span>
                 <h1>Coffee Name</h1>
                 <p>Coffee Roast</p>
