--- a/coffee.html
+++ b/coffee.html
@@ -3,36 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Fancy Coffee Company©</title>
-    <!--Bootstrap Stylesheet CDN:-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <!--Custom CSS Stylesheet:-->
     <link rel="stylesheet" href="css/coffee-project.css">
 </head>
 <body>
 
-<!--Header with Background Image and Text Here:-->
 <header>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4 text-center text-dark">Fancy Coffee Company©</h1>
-            <p class="lead"></p>
+    <div class="docrob-tron jumbotron-fluid" style="background-image:
+        url(images/intro-1646842160.jpg);  background-size: cover">
+            <h1 class="display-4 text-center text-light">
+            Fancy Coffee Company©</h1>
         </div>
-    </div>
 </header>
 
-<!--Top Card Below Header with Quote Here:-->
+<br>
 
-<!--Main Body Div Code (Render Coffees JS Functions) Here:-->
 <div class="container">
     <div class="row">
         <div class="col-8 text-center card">
-            <div id="coffees" class="coffees">
+            <div id="coffees" class="coffee">
                 <span>Coffee Id</span>
                 <h1>Coffee Name</h1>
                 <p>Coffee Roast</p>
             </div>
         </div>
-        <!--Filter by Roast & Coffee Search HTML Code Here:-->
+
+        <br>
+
         <div class="col-4 text-center card">
             <form>
                 <h1>Search for a Coffee:</h1>
@@ -49,7 +46,7 @@
                 <input id="coffee-selection" name="coffee-selection" type="text">
             </form>
             <br>
-            <!--User Add a New Coffee HTML Code Here:-->
+
             <form>
                 <h1>Add a Coffee:</h1>
                 <label for="new-roast-selection">New Roast:</label>
@@ -67,15 +64,13 @@
             </div>
             <br>
 
-
-            <!--JQuery CDN:-->
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-            <!--Bootstrap Script CDN:-->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-            <!--Custom JS Script:-->
-            <script src="js/coffee-project.js"></script>
+            </div>
         </div>
     </div>
-</div>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="js/coffee-project.js"></script>
 </body>
 </html>
