--- a/coffee.html
+++ b/coffee.html
@@ -5,13 +5,14 @@
     <title>Fancy Coffee Company©</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/coffee-project.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fot=no">
 </head>
 <body>
 
 <header>
     <div class="docrob-tron jumbotron-fluid" style="background-image:
         url(images/intro-1646842160.jpg);  background-size: cover">
-            <h1 class="display-4 text-center text-light">
+            <h1 class="display-4 text-center" style="color: #f17344">
             Fancy Coffee Company©</h1>
         </div>
 </header>
@@ -20,7 +21,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-8 text-center card">
+        <div class="col-8 text-center card" >
             <div id="coffees" class="coffee">
                 <span>Coffee Id</span>
                 <h1>Coffee Name</h1>
@@ -30,7 +31,7 @@
 
         <br>
 
-        <div class="col-4 text-center card">
+        <div class="col-4 text-center card" style="background-image:url(images/file)";>
             <form>
                 <h1>Search for a Coffee:</h1>
                 <label for="roast-selection">Filter by Roast:</label>
@@ -62,6 +63,7 @@
             <div>
                 <input class="btn btn-dark btn-block" id="submit" type="submit" />
             </div>
+
             <br>
 
             </div>
@@ -72,5 +74,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="js/coffee-project.js"></script>
+
 </body>
 </html>
