messed with the submit button attributes

--- a/coffee.html
+++ b/coffee.html
@@ -31,7 +31,7 @@
 
         <br>
 
-        <div class="col-4 text-center card" style="background-image:url(images/file)";>
+        <div class="col-4 text-center card">
             <form>
                 <h1>Search for a Coffee:</h1>
                 <label for="roast-selection">Filter by Roast:</label>
